--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 h1, h2, h3 {
   font-weight: bold;
 }
-.header {
+#header {
   background-image: url("../resources/images/the-flatiron-building.png");
 }
 h1 {
